# Courses

./: README.md
Advanced Programming Techniques/KuMi/: main.cpp  task.h
Advanced Programming Techniques/SaKa/: Sawicki_Solution.cpp
Advanced Programming Techniques/ZajJa - KuOl/Czesc01/zad02/: CMakeLists.txt  zad02.cpp
Computational Intelligence Methods/: Readme.md
Computational Intelligence Methods/lab2/: Lab2_training.txt  accuracy.m  generate_data.m  hiper_plot.m  lab2.m  lab2.mlx  partition.m  train_net.m  zad2.mlx
Computational Intelligence Methods/lab3/: X_trains.mat  generate_data.m  generate_net.m  generate_randn.m  nets.mat  ubungen1.mlx  y_test.mat  y_trains.mat  zad1.mlx
Computational Intelligence Methods/lab4/: describe_net.m  get_net.m  plot_data.m  plot_rand_data.m  zad1.mlx
Computational Intelligence Methods/lab5/: Lab5_testing.txt  Lab5_training.txt  compare_outputs.m  convert_to_max.m  get_net.m  output_accuracy.m  zad1.mlx
Computational Intelligence Methods/lab6/: fis.fis  fis2.fis  gauss5.fis  zad1.mlx
Computational Intelligence Methods/lab8/: Untitled.ipynb  lab08.ipynb  lab08.py  to_compare.py  zad1.mlx
Computer Vision/: Image Segmentation.ipynb  Sign_Language_CNN.ipynb
Data Bases 2/: Górczany_Mateusz_03.sql  Górczany_Mateusz_09.sql  Górczany_Mateusz_zad1.sql  Górczany_Mateusz_zad4.sql  Górczany_Mateusz_zad5.cs  Górczany_Mateusz_zad6.cs  Górczany_Mateusz_zad7.cs
Engineering Numerical Methods 2/: Readme.md
Komputeryzacja Pomiarów/: collect_radar_data.py  dane.csv  radar_plot.py
Numerical Methods/: README.md
(+81 files in other folders)
